--- a/templates/components/search_bar.html
+++ b/templates/components/search_bar.html
@@ -78,7 +78,7 @@
     </div>
   </div>
   <!-- dropdown results -->
-  <div id="search_result_container" class="absolute top-full left-0 right-auto bg-gray-900 hover:opacity-100 transition-colors duration-150 w-full py-2 rounded-md translate-y-2 hidden">
+  <div id="search_result_container" class="absolute top-full left-0 z-10 right-auto bg-gray-900 hover:opacity-100 transition-colors duration-150 w-full py-2 rounded-md translate-y-2 hidden">
     <ul id="search_result_list" class="max-h-96 overflow-y-auto">
       <!-- TEMPLATE -->
       <!-- there are users, skills and experiences categories -->
