--- a/templates/components/node_side_bar.html
+++ b/templates/components/node_side_bar.html
@@ -7,10 +7,10 @@
       <h4 id="nsb_name" class="ml-2 text-[25px] overflow-x-auto whitespace-nowrap">Node Name</h4>
     </div>
     <div class="flex items-center">
-      <svg id="nsb_save_description" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2 text-success cursor-pointer hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+      <svg id="nsb_save" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2 text-success cursor-pointer hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
         <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
       </svg>
-      <svg id="nsb_edit_description" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 cursor-pointer text-gray-500 hover:text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+      <svg id="nsb_edit" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 cursor-pointer text-gray-500 hover:text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
         <path stroke-linecap="round" stroke-linejoin="round" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
       </svg>
     </div>
@@ -26,9 +26,9 @@
       </span>
       <div 
         id="nsb_proficiency_toggle"
-        class="relative ml-3 bg-background p-2 rounded-md flex items-center justify-between cursor-pointer">
-        <span id="nsb_proficiency_text" class="text-base line-clamp-1 flex-1 grow shrink mr-2">Able to Use Professionally</span>
-        <svg id="nsb_proficiency_arrow" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 rotate-180 transition-transform duration-150" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        class="relative ml-3 bg-background p-2 rounded-md flex items-center justify-between">
+        <span id="nsb_proficiency_text" class="text-base line-clamp-1 flex-1 grow shrink">Able to Use Professionally</span>
+        <svg id="nsb_proficiency_arrow" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 rotate-180 transition-transform duration-150 hidden ml-2" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
           <path stroke-linecap="round" stroke-linejoin="round" d="M5 15l7-7 7 7" />
         </svg>
         <!-- dropdown menu -->
@@ -90,9 +90,6 @@
           </ul>
         </div>
       </div>
-      <svg id="nsb_save_proficiency" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2 text-success cursor-pointer hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
-      </svg>
     </div>
     <div class="w-full h-3 bg-[#3d488b] rounded-full overflow-hidden">
       <div id="nsb_proficiency_bar" class="h-full bg-secondary rounded-full transition-all duration-200">
