using a badge image as a placeholder for skill icons

--- a/templates/components/node_side_bar.html
+++ b/templates/components/node_side_bar.html
@@ -3,7 +3,7 @@
 <div id="nsb" class="bg-darker-blue p-4 max-w-md w-96 min-h-full absolute h-full top-0 right-0 translate-x-full transition-transform duration-300">
   <header class="flex justify-between items-center">
     <div class="flex items-center overflow-auto grow flex-1 w-full">
-      <img id="nsb_image" src="{% static 'images/python_logo.png' %}" alt="Icon" class="h-8 w-8">
+      <img id="nsb_image" src="{% static 'images/svg/badge.svg' %}" alt="Icon" class="h-8 w-8">
       <h4 id="nsb_name" class="ml-2 text-[25px] overflow-x-auto whitespace-nowrap">Node Name</h4>
     </div>
     <div class="flex items-center">
