--- a/templates/app/other_user_profile.html
+++ b/templates/app/other_user_profile.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<div class="bg-background h-full space-y-4 p-14 relative">
+<div class="bg-background h-full p-14 relative">
       <div id="profile" class="flex items-center justify-center space-x-10">
         <div id="pic-container" class="w-52">
           <img src="{{profile.image.url}}" alt="" class="w-full h-52 object-cover object-top rounded-full border-2">
@@ -98,7 +98,6 @@
       <div id="cards-container" class="grid grid-flow-col auto-cols-[55%] gap-3 overflow-x-auto overscroll-x-contain">
           <div id="card-container">
             <div class="top-card border-2 rounded-xl bg-[url('/static/images/journey_image.jpg')] bg-no-repeat bg-cover bg-center h-[250px] cursor-pointer relative">
-              <p class="absolute top-3 left-3">(Kind of Experience)</p>
               <p class="absolute bottom-3 left-3">(Name)</p>
               <div class="absolute bottom-3 right-3">
                 {% include 'icons/heart.html' with class="h-8 w-8 cursor-pointer" %}            
@@ -130,7 +129,8 @@
       <div 
       class="modal modal-content border-4 shadow-lg w-[800px] h-[800px] flex 
       flex-col pointer-events-auto bg-clip-padding 
-      rounded-md outline-none text-current absolute top-1/2 right-1/2">
+      rounded-md outline-none text-current absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/3 z-40 scale-0"> 
+      <!-- scale-0 -> scale-1 if active --> 
         <div
             class="
             modal-header flex flex-shrink-0 items-center justify-between 
@@ -207,6 +207,7 @@
         </div>
       </div>
       <!-- end of testing -->
+      <div id="overlay" class="fixed top-0 left-0 right-0 bottom-0 bg-slate-200 opacity-50 pointer-events-none"></div>
         
 </div>
 
