--- a/templates/components/project_list_header.html
+++ b/templates/components/project_list_header.html
@@ -2,6 +2,11 @@
 <div class="project-name flex justify-center">
     <h4>Experience Name</h4>
 </div>
+{% if type == "skill_search_click"%}
+<div class="User-Profile flex justify-center">
+    <h4>User</h4>
+</div>
+{% endif %}
 <div class="Likes flex justify-center">
     <h4>Likes</h4>
 </div>
