--- a/templates/base.html
+++ b/templates/base.html
@@ -27,5 +27,7 @@
     {% endblock content %}
     <script src={% static 'js/Modal.js' %}></script>
     <script src={%static '/js/project_list_descrption.js' %}></script>
+    <script src={%static '/js/exp_display_modal.js' %}></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </body>
 </html>
