--- a/templates/components/project_list.html
+++ b/templates/components/project_list.html
@@ -15,14 +15,15 @@ border-gray-600 rounded-lg m-1.5 overflow-y-auto">
     <div 
     class="projectListHeader grid grid-cols-3 mx-0 bg-[#00171F] 
     rounded-md border-2 p-4">
-        {% include "components/project_list_header.html" %}
+        {% include "components/project_list_header.html" with type=type%}
     </div>
     <div class="projectListCardsContainer mt-3">
         {% for experience in experiences %}
-            {% include "components\project_list_card.html" with project=experience %}
+            {% include "components\project_list_card.html" with project=experience type=type %}
         {% endfor %}
     </div>
 </div>
+{% include "app\experience_display.html" %}
 </div>
 {% endblock content %}
 
