--- a/templates/components/project_list_card.html
+++ b/templates/components/project_list_card.html
@@ -14,7 +14,7 @@
         </div>
         {% if type == "skill_search_click"%}
         <div class="username my-auto flex justify-center">
-            <a href="{% url 'other_profile_page' %}/{{project.profile.username}}">{{project.name}}</a>
+            <a href="{% url 'profile_page' %}/{{ project.profile.username }}">{{project.profile.username}}</a>
         </div>
         {% endif %}
         <div class="likes my-auto flex justify-center">
