--- a/templates/components/project_list.html
+++ b/templates/components/project_list.html
@@ -13,7 +13,8 @@ class=
 "projectsListContainer h-full text-rice-white border-2 
 border-gray-600 rounded-lg m-1.5 overflow-y-auto">
     <div 
-    class="projectListHeader grid grid-cols-3 mx-0 bg-[#00171F] 
+    class="projectListHeader grid mx-0 bg-[#00171F] 
+    {% if type == "skill_search_click"%} grid-cols-4 {% else %} grid-cols-3 {% endif %}
     rounded-md border-2 p-4">
         {% include "components/project_list_header.html" with type=type%}
     </div>
