Styling changes to project_list

--- a/templates/components/sidemenu.html
+++ b/templates/components/sidemenu.html
@@ -37,6 +37,7 @@
         <span class="ml-2">Settings</span>
       </div>  
     </a>
+    {% include "app/experience_display.html" %}
   </div>  
   <!-- the sidebar menu item -->
 </div>
