--- a/templates/components/project_list.html
+++ b/templates/components/project_list.html
@@ -7,24 +7,31 @@
 {% endblock headers %}
 
 {% block content %}
-<div class='h-[90%]'>
-<div 
-class=
-"projectsListContainer h-full text-rice-white border-2 
-border-gray-600 rounded-lg m-1.5 overflow-y-auto">
-    <div 
-    class="projectListHeader grid mx-0 bg-[#00171F] 
-    {% if type == "skill_search_click"%} grid-cols-4 {% else %} grid-cols-3 {% endif %}
-    rounded-md border-2 p-4">
-        {% include "components/project_list_header.html" with type=type%}
+<div class="grid grid-cols-12 h-[calc(100%_-_80px)]">
+    <div class="col-span-2">
+        {% include "components/sidemenu.html" %}
     </div>
-    <div class="projectListCardsContainer mt-3">
-        {% for experience in experiences %}
-            {% include "components/project_list_card.html" with project=experience type=type %}
-        {% endfor %}
+    
+    <div id="treeContainer" class="col-span-10 h-full bg-background">
+        <div class='h-[90%]'>
+            <div 
+            class=
+            "projectsListContainer h-full text-rice-white border-2 
+            border-gray-600 rounded-lg m-1.5 my-[2.5rem] overflow-y-auto">
+                <div 
+                class="projectListHeader grid mx-0 bg-[#00171F] 
+                {% if type == "skill_search_click"%} grid-cols-4 {% else %} grid-cols-3 {% endif %}
+                rounded-md border-2 p-4">
+                    {% include "components/project_list_header.html" with type=type%}
+                </div>
+                <div class="projectListCardsContainer mt-3">
+                    {% for experience in experiences %}
+                        {% include "components/project_list_card.html" with project=experience type=type %}
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-{% include "app/experience_display.html" %}
 </div>
 {% endblock content %}
 
