--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -37,7 +37,7 @@
     <!-- links: logo, how, about -->
     <ul class="flex justify-start items-center h-20">
       <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-        <a href="{% url 'dashboard_page' %}">Logo</a>
+        <a href="{% url 'dashboard_page' %}">Coding Journey</a>
       </li>
       <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
         <a href="{% url 'landing_page' %}#about_us">About Us</a>
@@ -57,7 +57,7 @@
           <img src="{{request.user.profile.image.url}}" class="w-full h-12 border-2 object-cover object-top rounded-full">
         </div>
         <div class="ml-10">
-          <p class="cursor-pointer opacity-70 hover:opacity-100">{{request.user.username | title}}</p>
+          <p class="cursor-pointer opacity-70 hover:opacity-100"><a href="{% url 'profile_page' %}">{{request.user.username | title}}</a></p>
           <a href="{% url 'logout' %}" class="opacity-70 hover:opacity-100">Log Out</a>
         </div>
       </div>
