--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -36,8 +36,10 @@
   >
     <!-- links: logo, how, about -->
     <ul class="flex justify-start items-center h-20">
-      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-        <a href="{% url 'dashboard_page' %}">Coding Journey</a>
+      <li class="mr-10 cursor-pointer opacity-70 hover:opacity-100">
+        <a href="{% url 'dashboard_page' %}">
+          {% include 'icons/mainlogo.html' with class="w-32 h-32"%}
+        </a>
       </li>
       <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
         <a href="{% url 'landing_page' %}#about_us">About Us</a>
