--- a/templates/app/manage_desired_skills.html
+++ b/templates/app/manage_desired_skills.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block headers %}
 <title>Manage Desired Skills | {{ profile.user.username }}</title>
@@ -6,15 +7,79 @@
 
 {% block content %}
 <div class="grid grid-cols-12 h-[calc(100%_-_80px)]">
-    {% include 'components/sidemenu.html' %}
-    <div class="col-span-10">
-      <ul>
-        {% for ds in desired_skills %}
-        <li>{{ ds }}</li>
-        {% empty %}
-        <li>no desired skills</li>
-        {% endfor %}
-      </ul>
+  {% include 'components/sidemenu.html' %}
+  <div class="col-span-10">
+    <div class="py-4 px-9 flex items-center justify-between">
+      <h3>All Desired Skills</h3>
+      <div>
+        {% if ds_count > 0 %}
+        <button id="multi_select_toggle" class="
+              button 
+              button-transition 
+              bg-gradient-to-b 
+              from-transparent 
+              to-transparent 
+              transition-colors 
+              duration-300 
+              hover:duration-150
+              hover:bg-primary"
+              data-content="Select and Delete"
+              >
+          Select and Delete
+        </button>
+        {% endif %}
+        <button class="button button-transition" id="add_ds">
+          Add Desired Skill
+        </button>
+      </div>
     </div>
+    <div class="h-[2px] w-11/12 bg-gray-700 m-auto mb-4"></div>
+    <ul class="grid gap-9 grid-cols-[repeat(auto-fill,_minmax(270px,_1fr))] px-9 transition-all duration-300" id="desired_skills_list">
+      {% for ds in desired_skills %}
+      <li data-ds="{{ ds.skill.name }}" class="relative">
+        <div class="rounded-md overflow-hidden h-[75%] bg-primary-darker">
+          <img src="{{ ds.skill.icon_HREF|default:'/static/images/svg/badge.svg' }}" alt="skill image"
+            class="w-full h-full object-contain">
+        </div>
+        <div class="h-[25%] flex items-center justify-between px-2">
+          <div>
+            <p class="font-bold text-sm line-clamp-1">{{ ds.skill.name }}</p>
+            <p class="text-sm line-clamp-1">Proficiency: {{ ds.get_proficiency_display }}</p>
+          </div>
+          <div class="relative">
+            <div id="{{ ds.skill.name|add:'_drop_down_button' }}" data-menu-button data-for-ds="{{ ds.skill.id }}"
+              class="h-8 w-8 duration-150 transition-colors cursor-pointer hover:bg-gray-400/30 rounded-full flex items-center justify-center ">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M12 5v.01M12 12v.01M12 19v.01M12 6a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
+              </svg>
+            </div>
+            <div id="{{ ds.skill.id|add:'_drop_down'|cut:' ' }}" data-menu
+              class="absolute top-full right-0 origin-top bg-primary rounded-md overflow-hidden scale-y-0 duration-100 transition-transform">
+              <ul id="{{ ds.skill.id|add:'_drop_down_list'|cut:' ' }}" drop-down-list>
+                <li data-action="delete" data-action-content="{{ ds.skill.name }}" class="px-3 py-1 cursor-pointer duration-300 hover:duration-150 transition-colors hover:bg-red-400">
+                  Delete
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div select-overlay selection="{{ ds.skill.name }}" data-is-selected="false" class="group absolute top-0 bottom-0 right-0 left-0 bg-gray-900/70 rounded-md border-4 border-gray-400/70 cursor-pointer items-center justify-center flex hidden hover:border-red-300/70 transition-colors duration-150">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-1/2 w-1/2 text-gray-400/70 group-hover:text-red-300/70 transition-colors duration-150" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+          </svg>
+        </div>
+      </li>
+      {% empty %}
+      <li>No desired skills...</li>
+      {% endfor %}
+    </ul>
+  </div>
+  <form action="{% url 'delete_desired_skill' %}" method="post" class="hidden" id="delete_ds_form">
+    {% csrf_token %}
+    <input type="hidden" name="names" id="ddsf_names">
+  </form>
 </div>
+<script src="{% static 'js/manage_ds.js' %}"></script>
 {% endblock %}
