--- a/templates/app/manage_experiences.html
+++ b/templates/app/manage_experiences.html
@@ -9,7 +9,106 @@
 <div class="grid grid-cols-12 h-[calc(100%_-_80px)]">
   {% include 'components/sidemenu.html' %}
   <div class="col-span-10">
-
+    <div class="py-4 px-9 flex items-center justify-between">
+      <h3>All Experiences</h3>
+      <div>
+        {% if experience_count > 0 %}
+        <button id="multi_select_toggle" class="
+              button 
+              button-transition 
+              bg-gradient-to-b 
+              from-transparent 
+              to-transparent 
+              transition-colors 
+              duration-300 
+              hover:duration-150
+              hover:bg-primary" data-content="Select and Delete">
+          Select and Delete
+        </button>
+        {% endif %}
+        <button class="button button-transition" id="add_exp">
+          Add Experience
+        </button>
+      </div>
+    </div>
+    <div class="h-[2px] w-11/12 bg-gray-700 m-auto mb-4"></div>
+    <ul class="grid gap-9 grid-cols-[repeat(auto-fill,_minmax(270px,_1fr))] px-9 transition-all duration-300"
+      id="experiences_list">
+      {% for exp in experiences %}
+      <li data-exp="{{ exp.id }}" class="relative">
+        <div
+          class="rounded-md overflow-hidden h-[75%] bg-primary-darker relative after:absolute after:top-0 after:right-0 after:left-0 after:bottom-0 after:z-10 after:bg-gradient-to-b after:from-transparent after:to-gray-900/90 after:opacity-0 after:hover:opacity-100 after:transition-opacity after:duration-150 group">
+          {% if false %}
+          <img src="{{ exp.image|default:'/static/images/svg/badge.svg' }}" alt="skill image"
+            class="w-full h-full object-contain">
+          {% else %}
+          {% comment %} adds as a fill for the missing image {% endcomment %}
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-full w-full object-contain" fill="none" viewBox="0 0 24 24"
+            stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
+          </svg>
+          {% endif %}
+          <div
+            class="absolute bottom-0 right-0 left-0 top-0 z-20 opacity-0 group-hover:opacity-100 transition-opacity duration-150">
+            <p class="line-clamp-3 px-2 max-h-[75%] absolute bottom-0">
+              {{ exp.description }}
+            </p>
+            <div
+              class="px-2 max-h-9 rounded-md flex items-center justify-between bg-red-400 mr-3 absolute top-3 right-0">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline-block text-red-200" viewBox="0 0 20 20"
+                fill="currentColor">
+                <path fill-rule="evenodd"
+                  d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
+                  clip-rule="evenodd" />
+              </svg>
+              <span class="inline-block text-red-200 ml-1 text-center">{{ exp.likes_amount }}</span>
+            </div>
+          </div>
+        </div>
+        <div class="h-[25%] flex items-center justify-between px-2">
+          <div>
+            <p class="font-bold text-sm line-clamp-1">{{ exp.name }}</p>
+          </div>
+          <div class="relative">
+            <div id="{{ exp.id|add:'_drop_down_button' }}" data-menu-button data-for-exp="{{ exp.id }}"
+              class="h-8 w-8 duration-150 transition-colors cursor-pointer hover:bg-gray-400/30 rounded-full flex items-center justify-center ">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M12 5v.01M12 12v.01M12 19v.01M12 6a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
+              </svg>
+            </div>
+            <div id="{{ exp.id|stringformat:'s'|add:"_drop_down"|cut:' ' }}" data-menu
+              class="absolute top-full right-0 origin-top bg-primary rounded-md overflow-hidden scale-y-0 duration-100 transition-transform">
+              <ul id="{{ exp.id|add:'_drop_down_list'|cut:' ' }}" drop-down-list>
+                <li data-action="delete" data-action-content="{{ exp.id }}"
+                  class="px-3 py-1 cursor-pointer duration-300 hover:duration-150 transition-colors hover:bg-red-400">
+                  Delete
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div select-overlay selection="{{ exp.id }}" data-is-selected="false"
+          class="group absolute top-0 bottom-0 right-0 left-0 z-30 bg-gray-900/70 rounded-md border-4 border-gray-400/70 cursor-pointer items-center justify-center flex hidden hover:border-red-300/70 transition-colors duration-150">
+          <svg xmlns="http://www.w3.org/2000/svg"
+            class="h-1/2 w-1/2 text-gray-400/70 group-hover:text-red-300/70 transition-colors duration-150" fill="none"
+            viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+          </svg>
+        </div>
+      </li>
+      {% empty %}
+      <li>No experiences...</li>
+      {% endfor %}
+    </ul>
   </div>
+  <form action="{% url 'delete_exp' %}" method="post" class="hidden" id="delete_exp_form">
+    {% csrf_token %}
+    <input type="hidden" name="names" id="dexp_names">
+  </form>
 </div>
+<script src="{% static 'js/manage_exp.js' %}"></script>
 {% endblock %}
